--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ body {
     background: #222831;
     color: #EEEEEE;
     margin-top: 50px;
-    margin-left: 100px;
+    margin-left: 0px; /* Change the value here */
     margin-right: 100px;
 }
 
@@ -24,14 +24,14 @@ h1 {
 h2 {
     font-size: 1.75;
     color: #C88E00;
-    margin-left: 50px;
+    margin-left: 0px; /* Change the value here */
 }
 
 /* Sub-sub titles */
 h3 {
     font-size: 1.3em;
     color: #FFFFFFFF;
-    margin-left: 50px;
+    margin-left: 0px; /* Change the value here */
 }
 
 /* Info box on top of the page */
